# it-academy

./: .gitignore  factorial.cpp  factorial.h  hello_world.h  module_4.cpp  module_4.h  module_5.cpp  module_5.h  module_6.cpp  module_6.h  readme.md  sysinfo.cpp  sysinfo.h  test.cpp
module-1/: hello_world.cpp  readme.md
module-10/: CMakeLists.txt  abstract_forest.cpp  abstract_forest.h  test.cpp
module-13/: CMakeLists.txt  servicestation.cpp  servicestation.h  test.cpp
module-14/: CMakeLists.txt  calculator.h  test.cpp
module-15/CurrencyConverter/: CMakeLists.txt  ccwindow.cpp  ccwindow.h  icons.qrc  main.cpp  style.h
module-17-18/: CMakeLists.txt  shop.cpp  shop.h  test.cpp
module-19/: CMakeLists.txt  multithread.h  test.cpp
module-2/: factorial.h  test.cpp
module-4/: test.cpp
module-5/: README.md
module-6/: README.md  module_6.h  test.cpp
module-8/: CMakeLists.txt  a.out  bin  book.cpp  book.h  test.cpp
module-9/: CMakeLists.txt  forest.cpp  forest.h  test.cpp
